--- a/bsproject1.html
+++ b/bsproject1.html
@@ -305,7 +305,7 @@
          <div class="container-fluid">
              <div class="row">
                  <div class="col text-center">
-                    <h3 class="text-white fw-light p-3 text-uppercase">Knowledge Sharing Website</h3>
+                    <h3 class="text-white fw-light p-3 text-uppercase"> Foundation Knowledge Sharing Website</h3>
                     <p class="fw-light text-light fst-italic">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <div class="py-3">
                         <a href="#"><i class="fab fa-facebook fa-2x text-primary mx-3"></i></a>
